--- a/public/index.html
+++ b/public/index.html
@@ -145,7 +145,7 @@
         <hr>
     </div><!-- Footer -->
     <footer class="navbar navbar-inverse navbar-fixed-bottom">
-        <p><small>Copyright &copy; All food pictures, all the time Website
+        <p><small>Copyright &copy; Trivia Game!!!
         2016</small></p>
     </footer><!-- /.container -->
     <!-- jQuery -->
